[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
enum-as-inner = "0.6.0"
jwt-simple = "0.11.5"

[[bin]]
name = "nixcache-auth"
path = "src/main.rs"
