[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attic = { git = "https://github.com/zhaofengli/attic", rev = "5f85e35a25085b75e1cbb6cc7291726fa4fab2ed" }
anyhow = "1.0.71"
displaydoc = "0.2.4"
hex = "0.4.3"
lazy_static = "1.4.0"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_with = "3.0.0"
sha2 = "0.10.6"
ed25519-compact = "2.0.4"
base64 = "0.21.2"
tokio = { version = "1.28.2", features = ["rt"] }

[dev-dependencies]
serde_json = "1.0.96"
