[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libnixstore = { path = "../libnixstore" }
anyhow = "1.0.71"
displaydoc = "0.2.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_with = "3.0.0"
ed25519-compact = "2.0.4"
base64 = "0.21.2"

[dev-dependencies]
serde_json = "1.0.96"
