[package]
name = "libnixstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nixbase32 = { path = "../nixbase32" }
cxx = "1.0"
displaydoc = "0.2.4"
futures = "0.3.28"
hex = "0.4.3"
lazy_static = "1.4.0"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
sha2 = "0.10.6"
tokio = { version = "1.28.2", features = ["rt", "sync", "io-util"] }

[build-dependencies]
bindgen = { version = "0.65.1" }
cxx-build = { version = "1.0" }
pkg-config = "0.3.27"
