[package]
name = "nixcache-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
displaydoc = "0.2.4"
hex = "0.4.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_with = "3.0.0"
sha2 = "0.10.6"
