[package]
name = "nixcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
attic = { git = "https://github.com/zhaofengli/attic" }
clap = { version = "4.3.0", features = ["derive"] }
enum-as-inner = "0.5.2"
indicatif = "0.17.3"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"
