[package]
name = "nixcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-channel = "1.8.0"
attic = { git = "https://github.com/zhaofengli/attic" }
bytes = "1.4.0"
clap = { version = "4.3.0", features = ["derive"] }
const_format = "0.2.30"
displaydoc = "0.2.4"
enum-as-inner = "0.5.2"
futures = "0.3.28"
indicatif = "0.17.3"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
toml = "0.7.4"
tracing-subscriber = "0.3.17"
xdg = "2.5.0"
